--- a/docker-compose.sample.yml
+++ b/docker-compose.sample.yml
@@ -10,6 +10,7 @@ services:
 #       - "3306:3308" # Optional
      restart: always
      environment:
+       #MYSQL_RANDOM_ROOT_PASSWORD: true
        MYSQL_ROOT_PASSWORD: sampleRootPass #!Change these
        MYSQL_DATABASE: sampleDbName #!Change these
        MYSQL_USER: sampleDbUser #!Change these
