--- a/docker-compose.sample.yml
+++ b/docker-compose.sample.yml
@@ -23,6 +23,18 @@ services:
        - ./secrets:/var/www/html/secrets
        - ./scripts:/var/www/html/scripts
      restart: always
+     environment:
+       WORDPRESS_ENV: development # OR production, stage, release
+       WORDPRESS_PROTOCOL: https # OR http
+       WORDPRESS_DOMAIN: www.example.com #!Change these
+       WORDPRESS_CONTENT_DIR: content # Under /public
+       WORDPRESS_CORE_DIR: x # Under /public
+       WORDPRESS_VERSION: $WORDPRESS_VERSION # Uses latest if not set. Set this env variable on host before running docker-compose $WORDPRESS_VERSION=4.8 && docker-compose up -d.
+       WORDPRESS_DB_HOST: db:3306
+       WORDPRESS_DB_NAME: sampleDbName #!Change these
+       WORDPRESS_DB_USER: sampleDbUser #!Change these
+       WORDPRESS_DB_PASSWORD: sampleDbPass #!Change these
+       WORDPRESS_IMPORT_DB: $WORDPRESS_IMPORT_DB # THIS WILL WIPE YOUR CURRENT DB. Set this env variable on host before running docker-compose $WORDPRESS_IMPORT_DB='db/db.sql' && docker-compose up -d.
    nginx:
      depends_on:
        - db
