--- a/docker/conf/php/7.0/fpm/pool.d/www.conf
+++ b/docker/conf/php/7.0/fpm/pool.d/www.conf
@@ -33,7 +33,8 @@ group = www-data
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = /run/php/php7.0-fpm.sock
+;listen = /run/php/php7.0-fpm.sock
+listen = '9000'
 
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on FreeBSD and OpenBSD)
@@ -409,5 +410,5 @@ pm.max_spare_servers = 3
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
-;php_admin_flag[log_errors] = on
+php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
